report finally done

--- a/vignettes/blueprint-final-report.Rmd
+++ b/vignettes/blueprint-final-report.Rmd
@@ -52,11 +52,11 @@ In our [initial report](https://mrc-ide.github.io/helios/articles/blueprint.html
 
 -   Far UVC deployment to cover a random 10% of total location area led to average reductions in annual infection incidence of \~9% for an endemic "Influenza-like" pathogen, and \~4% for an endemic "SARS-CoV-2-like" pathogen. Targeting far UVC to the riskiest locations increased this impact by 1.8x and 1.5x respectively.
 
--   In general, targeting far UVC deployment to locations based on riskiness had the highest relative impact when overall coverage of space was low. Increasing far UVC coverage led to increasing overlap of the spaces covered between random and targeted strategies, and a diminished difference between the two strategies in terms of impact.
+-   In general, targeting far UVC deployment to locations based on riskiness had the highest relative impact when overall coverage of space was low. Increasing far UVC coverage led to increasing overlap of the locations covered between random and targeted strategies, and a diminished difference between the two strategies in terms of impact.
 
--   Far UVC deployment had a relatively higher impact on transmission for the "Influenza-like" pathogen than for the "SARS-CoV-2-like" pathogen (though impact in the latter was not negligible). This arises from the differences in their respective $R_0$ values (\~1.35 and \~2.5 respectively), and the non-linear nature by which reductions in transmission affect epidemic dynamics when starting from different $R_0$ values.
+-   Far UVC deployment had a relatively higher impact on transmission for the "Influenza-like" pathogen than for the "SARS-CoV-2-like" pathogen (though impact in the latter was not negligible). This arises from the differences in their respective $R_0$ values (\~1.35 and \~2.5 respectively), and the non-linear nature by which reductions in transmission affect epidemic dynamics at different $R_0$ values.
 
--   Far UVC deployment to cover a random 10% of total location area led to modest reductions in epidemic final size of \~7% for an epidemic "Influenza-like" pathogen, and \~1% for an epidemic "SARS-CoV-2-like" pathogen. More substantial (and benefical) changes were observed however in other epidemic-relevant metrics such as the height and timing of the epidemic peak.
+-   Far UVC deployment to cover a random 10% of total location area led to limited reductions in epidemic final size of \~7% for an epidemic "Influenza-like" pathogen, and \~1% for an epidemic "SARS-CoV-2-like" pathogen. More substantial (and benefical) changes were observed in other epidemic-relevant metrics such as the height and timing of the epidemic peak, though the size of these effects at 10% coverage were still modest.
 
 # Model Changes
 
@@ -94,8 +94,8 @@ As a reminder, here is what the distribution of riskiness across locations of th
 scaling_factor <- 5
 parameter_list <- get_parameters(archetype = "flu",
                                  overrides = list(
-                                   human_population = 350000 / scaling_factor,
-                                   number_initial_S = 190000 / scaling_factor,
+                                   human_population = 400000 / scaling_factor,
+                                   number_initial_S = 240000 / scaling_factor,
                                    number_initial_E = 160000 / scaling_factor,
                                    number_initial_I = 0,
                                    number_initial_R = 0,
@@ -353,13 +353,13 @@ The results of analyses examining the impact of far UVC installation on an epide
 
 Figure \@ref(fig:epidemic-peak-size) shows the impact of far UVC deployment on the peak size of the simulated epidemic. Across all far UVC coverages, efficacies, and archetypes simulated, targeting far UVC deployment at the riskiest locations provided greater reductions in the peak epidemic size than random allocation. Increasing far UVC coverage led to progressively greater reductions in peak size, with a larger (proportional) impact on disease burden observed for an "influenza-like" pathogen than a "SARS-CoV-2-like" pathogen. Under some scenarios (e.g. $\geq$ 60% coverage and $\geq$ 80% efficacy, coverage targeted at riskiest settings), far UVC installation was sufficient to prevent the epidemic occurring entirely. While far UVC deployment failed to prevent an epidemic for the "SARS-CoV-2-Like" pathogen at even the highest coverage and efficacy combinations simulated, the targeted deployment of far UVC reduced the peak epidemic size up to \~60%.
 
-Assuming 10% coverage and 60% efficacy, and for the "Influenza-Like" archetype, random far UVC installation led to an 11.6% reduction (range 13.7%-18.0%) in the epidemic peak size. This corresponds to a reduction from 6.1% to 5.4% of the population infectious at the epidemic's peak. At 10% coverage and 80% assumed efficacy, the reductions in epidemic peak size was 14.0% (range 13.3%-24.3%). Targeting far UVC to the riskiest 10% of locations instead of randomly produced a 21.8% (range 19.4-25.8%) reduction in epidemic peak size when efficacy was 60%, which increased to 29.3% (range 28.7-29.5%) when efficacy was set to 80%
+Assuming 10% coverage and 60% efficacy, for the "Influenza-Like" archetype, random far UVC installation led to an 11.6% reduction (range 13.7%-18.0%) in the epidemic peak size. This corresponds to a reduction from 6.1% to 5.4% of the population infectious at the epidemic's peak. At 10% coverage and 80% assumed efficacy, the reductions in epidemic peak size was 14.0% (range 13.3%-24.3%). Targeting far UVC to the riskiest 10% of locations instead of randomly produced a 21.8% (range 19.4-25.8%) reduction in epidemic peak size when efficacy was 60%, which increased to 29.3% (range 28.7-29.5%) when efficacy was set to 80%. 
 
 For the "SARS-CoV-2-Like" archetype, assuming 10% random coverage and 60% efficacy, there was a 4.1% reduction (range 1.9%-5.6%) in epidemic peak size, from 20.4% to 19.5% of the population infectious at the epidemic's peak. At 10% coverage and 80% assumed efficacy, the reductions in epidemic peak size was 6.8% (range 4.5%-7.5%). A10% coverage targeted far UVC strategy with 60% efficacy resulted in a 7.7% (range 6.3-8.6%) reduction, and 80% efficacy resulted in an 11.1% (range 8.6-10.3%) reduction in epidemic peak size, relative to the no-intervention baseline.
 
 <!-- Assuming 10% coverage and 60% efficacy, random far UVC installation led to an 11.6% (range 13.7%-18.0%) reduction in the epidemic peak size (from 6.1% (5.4-7.7%) to 5.4% (4.7-6.3%)), as a percentage of the total population, for the "Influenza-Like" archetype, and 4.5% (range 1.9%-5.6%) (from 20.4% (19.3-21.3%) to 19.5% (18.9-20.2%)) for the "SARS-CoV-2-Like" archetype. At 10% coverage and 80% assumed efficacy, these are 14.0% (range 13.3%-24.3%) (from from 6.1% (5.4-7.7%) to 5.3% (4.7-5.8%)) and 6.8% (range 4.5%-7.5%) (from 20.4% (19.3-21.3%) to 19.0% (18.4-19.7%)) for the "influenza-like" and "SARS-CoV-2-like" pathogens respectively. For the "influenza-like" pathogen, targeting 60% efficacious far UVC at the riskiest 10% of locations produced a 21.8% (range 19.4-25.8%) (from (from 6.1% (5.4-7.7%) to 4.8% (4.4-5.7%)) reduction in epidemic peak size, which increased to 29.3% (range 28.7-29.5%) (from 6.1% (5.4-7.7%) to 4.3% (3.9-5.4%)) when efficacy was set to 80%. For the "SARS-CoV-2-like" pathogen, a 10% targeted far UVC strategy with 60% efficacy resulted in a 7.7% (range 6.3-8.6%) (from 20.4% (19.3-21.3%) to 18.8% (18.1-19.5%)) and 11.1% (range 8.6-10.3%) (from 20.4% (19.3-21.3%) to 18.1 (17.6-19.1%)) reduction in epidemic peak size respectively, relative to the no-intervention baseline. -->
 
-For the "influenza-like" pathogen and random coverage, increasing far UVC coverage from 10% to 70% and the efficacy from 40% to 80% reduced the mean peak epidemic size by 53.7% (55.8-51.4%). For the "SARS-CoV-2-like" pathogen, doubling the efficacy from 40% to 80% and increasing the coverage from 10% to 70% decreased the peak size by 53.7% (51.4-55.8%) for random coverage and by 67.8% (66.5-69.6%) for targeted coverage.
+<!-- For the "influenza-like" pathogen and random coverage, increasing far UVC coverage from 10% to 70% and the efficacy from 40% to 80% reduced the mean peak epidemic size by 53.7% (55.8-51.4%). For the "SARS-CoV-2-like" pathogen, doubling the efficacy from 40% to 80% and increasing the coverage from 10% to 70% decreased the peak size by 53.7% (51.4-55.8%) for random coverage and by 67.8% (66.5-69.6%) for targeted coverage. -->
 
 <!-- For the "influenza-like" pathogen and random coverage, increasing far UVC coverage from 10% to 70% and the efficacy from 40% to 80% reduced the mean peak epidemic size by 53.7% (55.8-51.4%) (5.5% (4.8-6.1%) to 0.65% (0.24-1.1%)), while targeting coverage at the riskiest locations decreased the mean peak size by 99.1% (98.8-99.1%) (5.2% (4.8-5.7%) to 0.48% (0.44-0.71%)) for the same parameters. For the "SARS-CoV-2-like" pathogen, doubling the efficacy from 40% to 80% and increasing the coverage from 10% to 70% decreased the peak size by 53.7% (51.4-55.8%) (19.7% (18.8-21.0%) to 9.1 (8.3-10.2%)) for random coverage and by 67.8% (66.5-69.6%) (19.5% (18.7-20.6%) to 6.3 (5.6-6.8%)) for targeted coverage. -->
 
@@ -367,7 +367,37 @@ For the "influenza-like" pathogen and random coverage, increasing far UVC covera
 
 ```{r epidemic-peak-size, fig.cap="(ref:epidemic-peak-size)", fig.fullwidth = TRUE, fig.height=5}
 
-epidemic_summary_outputs |>
+epidemic_summary_outputs_0.4_random <- epidemic_summary_outputs[epidemic_summary_outputs$coverage_type == "none", ]
+epidemic_summary_outputs_0.6_random <- epidemic_summary_outputs_0.4_random
+epidemic_summary_outputs_0.8_random <- epidemic_summary_outputs_0.4_random
+epidemic_summary_outputs_0.4_targeted <- epidemic_summary_outputs_0.4_random
+epidemic_summary_outputs_0.6_targeted <- epidemic_summary_outputs_0.6_random
+epidemic_summary_outputs_0.8_targeted <- epidemic_summary_outputs_0.8_random
+
+epidemic_summary_outputs_0.4_random$efficacy <- 0.4
+epidemic_summary_outputs_0.6_random$efficacy <- 0.6
+epidemic_summary_outputs_0.8_random$efficacy <- 0.8
+epidemic_summary_outputs_0.4_targeted$efficacy <- 0.4
+epidemic_summary_outputs_0.6_targeted$efficacy <- 0.6
+epidemic_summary_outputs_0.8_targeted$efficacy <- 0.8
+
+epidemic_summary_outputs_0.4_random$coverage_type <- rep("random", 2)
+epidemic_summary_outputs_0.6_random$coverage_type <- rep("random", 2)
+epidemic_summary_outputs_0.8_random$coverage_type <- rep("random", 2)
+epidemic_summary_outputs_0.4_targeted$coverage_type <- rep("targeted_riskiness", 2)
+epidemic_summary_outputs_0.6_targeted$coverage_type <- rep("targeted_riskiness", 2)
+epidemic_summary_outputs_0.8_targeted$coverage_type <- rep("targeted_riskiness", 2)
+
+epidemic_summary_outputs2 <- rbind(epidemic_summary_outputs, 
+                                  epidemic_summary_outputs_0.4_targeted,
+                                  epidemic_summary_outputs_0.6_targeted,
+                                  epidemic_summary_outputs_0.8_targeted,
+                                  epidemic_summary_outputs_0.4_random,
+                                  epidemic_summary_outputs_0.6_random,
+                                  epidemic_summary_outputs_0.8_random) %>%
+  filter(coverage_type != "none")
+
+epidemic_summary_outputs2 |>
   filter(coverage < 0.8, efficacy > 0) |>
   ggplot(aes(x = 100 * coverage, y = mean_peak / 1000, colour = coverage_type)) +
   geom_line(linewidth = 1) +
@@ -396,15 +426,17 @@ epidemic_summary_outputs |>
 
 #### Epidemic Peak Timing
 
-Figure \@ref(fig:epidemic-peak-timing) shows the impact of far UVC deployment on the timing of the epidemic peak. The deployment of far UVC increased the time taken for the epidemic peak timing for both the "influnza-like" and the "SARS-CoV-2-like" pathogens. Increasing far UVC coverage and/or efficacy increased the epidemic peak time. For 10% coverage and 60% efficacy, far UVC installation with 60% efficacy led to the epidemic peak occurring 5 days (range 1-10 days) later for the "influenza-like" archetype when compared to the no far UVC scenario, while targeting far UVC caused the peak to occur 16 days (range 9-25 days) later. Increasing the efficacy to 80% resulted in relative delays of 7 days (range 3-16 days) and 20 days (range 17-25 days) for the random and targeted coverage types respectively. For the "SARS-CoV-2-like" pathogen, 10% far UVC coverage with 60% efficacy delayed the epidemic peak by 2 (range 1-4 days) and 6 days (range 5-8 days) for the random and targeted strategies respectively, while increasing the efficacy to 80% for random and targeted far UVC achieved reductions of 5 days (range 3-6 days) and 8 days (range 6-9 days).
+Figure \@ref(fig:epidemic-peak-timing) shows the impact of far UVC deployment on the timing of the epidemic peak. The deployment of far UVC increased the time taken for the epidemic peak timing for both the "influenza-like" and the "SARS-CoV-2-like" pathogens. For 10% coverage and 60% efficacy, random far UVC installation led to the epidemic peak occurring 5% later (corresponding to an average delay of 6 days) for the "influenza-like" archetype when compared to the no far UVC scenario, while targeting far UVC caused the peak to occur 13% later (an average delay of 16 days). 
 
-Increasing targeted far UVC efficacy from 40% to 80% and the coverage from 10% to 50% for the "influenza-like" pathogen increased the peak time by 286% (range 177.9-541.6%) (138 days (131-154) to 395 days (233-834)), while increasing far UVC efficacy from 40% to 80% and the coverage from 10% to 70% increased the peak time by 181% (range 169.8-187.9%) (109 days (106-116) to 195 days (180-218)) for the SARS-CoV-2-like pathogen. Targeting far UVC coverage at the riskiest settings provided greater delays in epidemic peak timing relative to the random allocation of far UVC across all combinations of efficacy and coverage, with the difference in epidemic peak time between targeted and random coverage types increasing with both far UVC coverage and efficacy. The peak time observed for the "influenza-like" pathogen decreased rapidly at 80% efficacy when coverage \> 50%, as far UVC prevented the epidemic from occurring (Figure \@ref(fig:epidemic-peak-size)).
+For the "SARS-CoV-2-like" pathogen, 10% far UVC coverage with 60% efficacy delayed the epidemic peak by 1.8% (average delay of 2 days, range 1-4 days) and 5.7% (6 days, range 5-8 days) for the random and targeted strategies respectively, while increasing the efficacy to 80% for random and targeted far UVC led to the epidemic occurring 4.4% and 7% later respectively (corresponding to an average delay of 5 days and 8 days). Targeting far UVC coverage at the riskiest settings provided greater delays in epidemic peak timing relative to the random allocation of far UVC across all combinations of efficacy and coverage, with the difference in epidemic peak time between targeted and random coverage types increasing with both far UVC coverage and efficacy. 
+
+<!-- Increasing targeted far UVC efficacy from 40% to 80% and the coverage from 10% to 50% for the "influenza-like" pathogen increased the peak time by 286% (range 177.9-541.6%) (138 days (131-154) to 395 days (233-834)), while increasing far UVC efficacy from 40% to 80% and the coverage from 10% to 70% increased the peak time by 181% (range 169.8-187.9%) (109 days (106-116) to 195 days (180-218)) for the SARS-CoV-2-like pathogen.  -->
 
 (ref:epidemic-peak-timing) The impact of far UVC coverage type, coverage, and efficacy on the mean number of days until the peak of the epidemic wave (in days), defined as the average timestep on which the number of infected individuals in the population peaked across 25 stochastic simulations for each parameterisation, for influenza-like and SARs-CoV-2-like pathogens. The light blue lines represent simulations where was far UVC deployed at random across setting-types (excluding households), and the dark blue lines simulations where far UVC was targeted at the riskiest locations across all setting types (excluding households). The ribbons show minimum and maximum values across 25 stochastic replicates for each parameter set.
 
 ```{r epidemic-peak-timing, fig.cap="(ref:epidemic-peak-timing)", fig.fullwidth = TRUE, fig.height=5}
 
-epidemic_summary_outputs |>
+epidemic_summary_outputs2 |>
   filter(coverage < 0.8, efficacy > 0) |>
   filter(!(coverage > 0.5 & efficacy == 0.8 & coverage_type == "targeted_riskiness" & archetype == "influenza")) |>
   ggplot(aes(x = 100 * coverage, y = mean_peak_timing, colour = coverage_type)) +
@@ -434,15 +466,15 @@ epidemic_summary_outputs |>
 
 #### Epidemic Final Size
 
-Figure \@ref(fig:epidemic-final-size) shows the impact of far UVC deployment on the final size of the simulated epidemics. Relative to a non-intervention baseline, installing far UVC at a coverage of 10% and assuming 60% efficacy, far UVC reduced the epidemic final size, as a percentage of the total population by 5.5% (range 5.3%-6.7%) (from 61.2% (58.1-65.4%) to 57.9% (55.0-61.0%)) for the "Influenza-Like" archetype under random coverage and by 8.1% (range 6.0%-10.1%) (from 61.2% (58.1-65.4%) to 56.2% (54.6-58.8%)) under targeted coverage. Increasing the efficacy to 80% resulted in additional reductions of 7.1% (range 6.1%-9.8%) (from 61.2% (58.1-65.4%) to 56.9% (54.5-59.0%)) and 12.6% (range 10.8%-12.7%) (from 61.2% (58.1-65.4%) to 53.5% (50.7-58.3%)) to of baseline for random and targeted coverage respectively. For the "SARS-CoV-2-like" pathogen, installing far UVC at 10% coverage with 60% efficacy reduced the epidemic final size, relative to the no-far UVC baseline, by 1.2% (0.8-1.1%) (from 89.6% (88.7-90.3%) of the population to 88.5% (87.9-89.2%)) for random coverage and 1.5% (1.1-1.8%) (from 89.6% (88.7-90.3%) to 88.3% (87.7%-88.7%)) for targeted coverage. The reduction in final epidemic size increased to 2.1% (1.6-2.2%) (from 89.6% (88.7-90.3%) to 87780 (87.3-88.2%)) for random coverage and 2.7% (2.3-2.4%) (from 89.6% (88.7-90.3%) to 87.2% (86.5-88.2%)) for targeted coverage when the efficacy was increased to 80%.
+Figure \@ref(fig:epidemic-final-size) shows the impact of far UVC deployment on the final size of the simulated epidemics. Relative to a non-intervention baseline, installing far UVC at a randomly assigned coverage of 10% and assuming 60% efficacy, far UVC reduced the epidemic final size from 61.2% to 57.9% of the population infected for the "Influenza-like" archetype. This corresponds to a 5.5% (range 5.3%-6.7%) reduction. When far UVC coverage was targeted to the riskiest locations, this reduction was 8.1% (range 6.0%-10.1%). Increasing far UVC efficacy to 80% resulted in reductions of 7.1% (range 6.1%-9.8%) and 12.6% (range 10.8%-14.7%) for random and targeted coverage respectively. For the "SARS-CoV-2-like" pathogen, installing far UVC at 10% coverage with 60% efficacy reduced the epidemic final size by 1.2% (0.8-1.1%) (from 89.6% of the population infected to 88.5%) for random coverage and 1.5% (1.1-1.8%) for targeted coverage. When efficacy was 80%, the reduction in final epidemic size increased to 2.1% (1.6-2.2%) for random coverage and 2.7% for targeted coverage. In general, the reductions in final epidemic size observed for the "SARS-CoV-2" like pathogen were more moderate than for the "influenza-like" pathogen.   
 
-Increasing far UVC efficacy from 40% to 80% and expanding coverage from 10% to 80% decreased the mean final size by 70.5% (62.3-81.2%) (from 58.6% (56.0-60.7%) to 17.3% (10.5-22.9%)) when far UVC was deployed randomly against an "influenza-like" pathogen, and by 98.9% (97.2-99.6%) (from 58.1% (56.3-59.9%) to 0.59% (0.240-1.67%)) when targeted against the riskiest locations. Similarly, for the "SARS-CoV-2-like pathogen, the mean final size was reduced by 22.7% (20.9-24.7%) (88.9% (88.3-89.7%) to 68.7% (66.5-70.9%)) when efficacy was increased from 40% to 80% and coverage from 10% to 70% under random coverage and by 29.3% (27.5-30.2%) (88.9% (88.3-89.8%) to 62.9% (61.6%-65.1%)) under targeted far UVC. For the "influenza-like" pathogen, far UVC deployment provided substantial reductions in the final epidemic size. Increasing both far UVC coverage and efficacy resulted in substantial reductions in final epidemic size, and targeting far UVC deployment in the riskiest locations provided notable reductions in final epidemic size across all simulated parameter combinations. The reductions in final epidemic size observed for the "SARS-CoV-2" like pathogen were more moderate than for the "influenza-like" pathogen, and targeted far UVC coverage only provided reductions in epidemic final size for the "SARS-CoV-2" like pathogen only when efficacy $\>geq$ 60% and $\>geq$ 30%.
+<!-- Increasing far UVC efficacy from 40% to 80% and expanding coverage from 10% to 80% decreased the mean final size by 70.5% (62.3-81.2%) (from 58.6% (56.0-60.7%) to 17.3% (10.5-22.9%)) when far UVC was deployed randomly against an "influenza-like" pathogen, and by 98.9% (97.2-99.6%) (from 58.1% (56.3-59.9%) to 0.59% (0.240-1.67%)) when targeted against the riskiest locations. Similarly, for the "SARS-CoV-2-like pathogen, the mean final size was reduced by 22.7% (20.9-24.7%) (88.9% (88.3-89.7%) to 68.7% (66.5-70.9%)) when efficacy was increased from 40% to 80% and coverage from 10% to 70% under random coverage and by 29.3% (27.5-30.2%) (88.9% (88.3-89.8%) to 62.9% (61.6%-65.1%)) under targeted far UVC. For the "influenza-like" pathogen, far UVC deployment provided substantial reductions in the final epidemic size.  -->
 
 (ref:epidemic-final-size) The impact of far UVC coverage type, coverage, and efficacy on the mean final epidemic size per 1000 individuals, defined as the average maximum total number of recovered individuals in the population across 25 stochastic simulation runs for each parameterisation, for influenza-like and SARs-CoV-2-like pathogens. The light blue lines represent simulations where was far UVC deployed at random, and the dark blue lines simulations where far UVC was targeted at the riskiest settings. The ribbons show minimum and maximum values across 25 stochastic replicates for each parameter set.
 
 ```{r epidemic-final-size, fig.cap="(ref:epidemic-final-size)", fig.fullwidth = TRUE, fig.height=5}
 
-epidemic_summary_outputs |>
+epidemic_summary_outputs2 |>
   filter(coverage < 0.8, efficacy > 0) |>
   ggplot(aes(x = 100 * coverage, y = 100 * mean_final_size / 1e5, colour = coverage_type)) +
   geom_line(linewidth = 1.2) +
@@ -611,8 +643,8 @@ ggplot(data = df_comparison, aes(x = 100 * hypothetical_reduction,
 
 Our results highlight the impact that the deployment of far UVC could have in reducing disease transmission across a range of pathogen archetypes and disease metrics. Targeting the deployment of far UVC towards the riskiest locations provided additional reductions in epidemic size and intensity or endemic burden, but appreciable reductions were still observed when far UVC was installed at random and reductions in performance relative to targeted deployment could generally be overcome with increased efficacy and coverage. Far UVC deployment typically had a greater relative impact on the control of an "Influenza-like" pathogen than the "SARS-CoV-2-like" pathogen considered in our analyses.
 
-For the "Influenza-like" pathogen archetype (approximate $R_0$ of 1.35), targeted installation of far UVC at very high coverage and efficacy ($\geq$ 80%) achieved complete suppression in the epidemic instance (i.e. reduced R \< 1 and prevented the pathogen from spreading from low initial frequency). This was not achieved under any circumstances for the "SARS-CoV-2-like" pathogen archetype (approximate $R_0$ of 2.5). However, far UVC provided significant value in the epidemic scenarios even when it did not achieve complete suppression of the epidemic, as measured by the range of metrics considered in this report. Reductions in transmission that fall short of full suppression arising from far UVC could still reduce the associated pressure on healthcare systems by reducing the peak size (and therefore burden) on the healthcare system, and spreading that burden out over time - the so-called "flattening of the curve". Delaying the epidemic peak also provides more time for other medical countermeasures, such as vaccines, to be developed. Furthermore, for the same disease burden, flattening the curve enables shorter and less stringent non-pharmaceutical interventions to be implemented relative to scenarios in which far UVC is not available.
+For the "Influenza-like" pathogen archetype (approximate $R_0$ of 1.35), targeted installation of far UVC at very high coverage and efficacy ($\geq$ 80%) achieved complete suppression in the epidemic instance (i.e. reduced R \< 1 and prevented the pathogen from spreading from low initial frequency). This was not achieved under any circumstances for the "SARS-CoV-2-like" pathogen archetype (approximate $R_0$ of 2.5). However, far UVC provided significant value in the epidemic scenarios even when it did not achieve complete suppression of the epidemic, as measured by the range of metrics considered in this report. Reductions in transmission that fall short of full suppression arising from far UVC could still reduce the associated pressure on healthcare systems by reducing the peak size (and therefore burden) on the healthcare system, and spreading that burden out over time - the so-called "flattening of the curve". Delaying the epidemic peak also provides more time for other medical countermeasures, such as vaccines, to be developed. Furthermore, for the same disease burden, flattening the curve enables shorter and less stringent non-pharmaceutical interventions to be implemented relative to scenarios in which far UVC is not available. An important point to note however is that the impact of far UVC at 10% coverage and 60 or 80% efficacy on epidemic metrics was typically quite modest, with appreciable delays to epidemic timing or reductions in epidemic final size/peak size occurring when coverage was substantially higher. 
 
-In the context of an endemic pathogen, installation of far UVC to a random 10% of location space led to average reductions of approximately 9% and 4% in annual incidence of infection for the "Influenza-like" and "SARS-CoV-2-like" archetypes respectively. This difference between the archetypes is primarily driven by differences in the $R_0$ of each (\~1.35 for "Influenza-like" and \~2.5 for "SARS-CoV-2-like"). In general, there is a non-linear influence of $R_{0}$ on the final size of an epidemic (for an epidemic pathogen) and the average prevalence of infection (in the case of an persistently endemic pathogen). For lower values of $R_{0}$ which are near to the critical threshold of $R_0=1$, small increases to $R_0$ translate to (relatively) large increases in the above quantities (e.g. $R_0=1$ yields a final size of 0%; $R_0=1.25$ a final size of \~35%). At higher values of $R_{0}$ however, saturation occurs (e.g. the final size of an epidemic with robust and sterilizing immunity post infection can never be \>100%) and the rate at which increasing values of $R_0$ increases infection prevalence or epidemic final size diminishes (e.g $R_0=2$ yields a final size of \~80%; $R_0=2.25$ a final size of \~85%, $R_0=4$ a final size of \~95%). By the same logic, when the starting $R_0$ is high (as for the "SARS-CoV-2-like" archetype), small reductions in $R_0$ (e.g. due to far UVC) will have only a slight impact on infection prevalence or epidemic final size. By contrast, when baseline $R_0$ is lower (as for the "Influenza-like" archetype"), the infection prevalence (or final epidemic size) will decrease more (in relative terms) for the same (relative) reduction in $R_0$.
+In the context of an endemic pathogen, installation of far UVC to a random 10% of location space led to average reductions of approximately 9% and 4% in annual incidence of infection for the "Influenza-like" and "SARS-CoV-2-like" archetypes respectively. Given the scale of the burden associated with endemic respiratory pathogens (with many individuals infected at a cadence of ~once a year or more frequently), such modest reductions translate into large numbers of averted infections. The differences in the reductions observed between the archetypes is primarily driven by differences in the $R_0$ of each (\~1.35 for "Influenza-like" and \~2.5 for "SARS-CoV-2-like"). In general, there is a non-linear influence of $R_{0}$ on the final size of an epidemic (for an epidemic pathogen) and the average prevalence of infection (in the case of an persistently endemic pathogen). For lower values of $R_{0}$ which are near to the critical threshold of $R_0=1$, small increases to $R_0$ translate to (relatively) large increases in the above quantities (e.g. $R_0=1$ yields a final size of 0%; $R_0=1.25$ a final size of \~35%). At higher values of $R_{0}$ however, saturation occurs (e.g. the final size of an epidemic with robust and sterilizing immunity post infection can never be \>100%) and the rate at which increasing values of $R_0$ increases infection prevalence or epidemic final size diminishes (e.g $R_0=2$ yields a final size of \~80%; $R_0=2.25$ a final size of \~85%, $R_0=4$ a final size of \~95%). By the same logic, when the starting $R_0$ is high (as for the "SARS-CoV-2-like" archetype), small reductions in $R_0$ (e.g. due to far UVC) will have only a slight impact on infection prevalence or epidemic final size. By contrast, when baseline $R_0$ is lower (as for the "Influenza-like" archetype"), the infection prevalence (or final epidemic size) will decrease more (in relative terms) for the same (relative) reduction in $R_0$.
 
 Our results also highlight that the added value of targeting far UVC coverage based on riskiness (rather than at random) is greatest when the total percentage of covered space is low (e.g. 10% considered in the analyses presented in this report). As the proportion of space covered increases, there is increasing convergence between the two strategies (as a greater number of total spaces are covered). At 100% coverage, the two strategies are identical. Our results suggest that in instances where only a low fraction of spaces are likely to be covered (for instance during initial adoption of the technology), the value of information that enables installation to be targeted at the riskiest spaces is likely to be substantial.
